# llm-veil

./: .gitignore  Cargo.toml  README.md
doc/: 1st_spec.md  contract_coverage_matrix.json  development_workflow.md  safety_gate_contract.md
scripts/: verify_contract.py  verify_meta.py
skill/: SKILL.md
src/: cli.rs  config.rs  executor.rs  injector.rs  main.rs  path_guard.rs  redactor.rs  stats.rs  truncator.rs  utils.rs
tests/: contract_tests.rs
tests/fixtures/: contract_observations.json
