[package]
name = "llm-veil"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
wait-timeout = "0.2"
